temporary fix for card link jumping to bottom of page

--- a/src/components/Body/InfoCard/InfoCard.css
+++ b/src/components/Body/InfoCard/InfoCard.css
@@ -49,6 +49,6 @@
     margin: 5px;
     bottom: 0;
     left: 0;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
 }
